examples/compiler_errors/exposing/exposing_unknown_member.flx
import ExposingTarget exposing (nonexistent)

fn main() with IO {
    print(nonexistent())
}
